--- a/trunk/frmPNSettings.lfm
+++ b/trunk/frmPNSettings.lfm
@@ -1,7 +1,7 @@
 object frmSettings: TfrmSettings
-  Left = 298
+  Left = 374
   Height = 332
-  Top = 122
+  Top = 105
   Width = 514
   BorderStyle = bsSingle
   Caption = 'Settings'
@@ -134,5 +134,22 @@ object frmSettings: TfrmSettings
     Width = 92
     Caption = 'Ignore sections'
     TabOrder = 8
+  end
+  object lblRecent: TLabel
+    Left = 216
+    Height = 14
+    Top = 31
+    Width = 120
+    Caption = 'Recent file to remember:'
+    ParentColor = False
+  end
+  object speRecent: TSpinEdit
+    Left = 352
+    Height = 21
+    Top = 24
+    Width = 50
+    MaxValue = 15
+    TabOrder = 9
+    Value = 15
   end
 end
