--- a/trunk/frmIniPrev.lfm
+++ b/trunk/frmIniPrev.lfm
@@ -1,7 +1,7 @@
 object frmIniPrevMain: TfrmIniPrevMain
-  Left = 319
+  Left = 324
   Height = 483
-  Top = 231
+  Top = 63
   Width = 664
   Caption = 'Ini Translator'
   ClientHeight = 463
@@ -162,9 +162,9 @@ object frmIniPrevMain: TfrmIniPrevMain
   end
   object lblNewLineStringDefault: TLabel
     Left = 8
-    Height = 14
+    Height = 13
     Top = 384
-    Width = 13
+    Width = 12
     Caption = 'NL'
     Font.CharSet = 4
     Font.Color = clBlack
@@ -217,9 +217,9 @@ object frmIniPrevMain: TfrmIniPrevMain
   end
   object lblNewLineStringTranslation: TLabel
     Left = 8
-    Height = 14
+    Height = 13
     Top = 408
-    Width = 13
+    Width = 12
     Caption = 'NL'
     Font.CharSet = 4
     Font.Color = clBlack
@@ -245,9 +245,9 @@ object frmIniPrevMain: TfrmIniPrevMain
   end
   object lblCharsetDefault: TLabel
     Left = 40
-    Height = 14
+    Height = 13
     Top = 384
-    Width = 26
+    Width = 25
     Caption = 'UTF8'
     Enabled = False
     Font.CharSet = 4
@@ -260,10 +260,10 @@ object frmIniPrevMain: TfrmIniPrevMain
   end
   object lblCharsetTranslation: TLabel
     Left = 40
-    Height = 14
+    Height = 13
     Hint = 'Encoding, used when reading the file. Click on it to change it.'
     Top = 408
-    Width = 26
+    Width = 25
     Caption = 'UTF8'
     Font.CharSet = 4
     Font.Color = clBlack
@@ -277,19 +277,19 @@ object frmIniPrevMain: TfrmIniPrevMain
   end
   object lblBOMDefault: TLabel
     Left = 152
-    Height = 14
+    Height = 13
     Top = 384
-    Width = 23
+    Width = 22
     Caption = 'BOM'
     Enabled = False
     ParentColor = False
   end
   object lblBOMTranslation: TLabel
     Left = 152
-    Height = 14
+    Height = 13
     Hint = 'Show if BOM is present in the file.'
     Top = 408
-    Width = 23
+    Width = 22
     Caption = 'BOM'
     Enabled = False
     ParentColor = False
@@ -298,26 +298,26 @@ object frmIniPrevMain: TfrmIniPrevMain
   end
   object lblStatusSecondary: TLabel
     Left = 340
-    Height = 14
+    Height = 13
     Top = 408
-    Width = 32
+    Width = 31
     Caption = 'Status'
     ParentColor = False
   end
   object lblArrow: TLabel
     Left = 210
-    Height = 14
+    Height = 13
     Top = 408
-    Width = 13
+    Width = 12
     Caption = '->'
     ParentColor = False
   end
   object lblCharsetTranslationWrite: TLabel
     Left = 230
-    Height = 14
+    Height = 13
     Hint = 'Encoding, used when writing the file. Click on it to change it.'
     Top = 408
-    Width = 26
+    Width = 25
     Caption = 'UTF8'
     ParentColor = False
     ParentShowHint = False
@@ -326,10 +326,10 @@ object frmIniPrevMain: TfrmIniPrevMain
   end
   object lblBOMTranslationWrite: TLabel
     Left = 290
-    Height = 14
+    Height = 13
     Hint = 'Write the file with or without BOM. Click to toggle.'
     Top = 408
-    Width = 23
+    Width = 22
     Caption = 'BOM'
     ParentColor = False
     ParentShowHint = False
@@ -348,18 +348,18 @@ object frmIniPrevMain: TfrmIniPrevMain
   end
   object lblAnsiCPMain: TLabel
     Left = 112
-    Height = 14
+    Height = 13
     Top = 384
-    Width = 19
+    Width = 18
     Caption = '___'
     Enabled = False
     ParentColor = False
   end
   object lblAnsiCPTranslation: TLabel
     Left = 112
-    Height = 14
+    Height = 13
     Top = 408
-    Width = 19
+    Width = 18
     Caption = '___'
     Enabled = False
     ParentColor = False
@@ -411,6 +411,10 @@ object frmIniPrevMain: TfrmIniPrevMain
         object mnuFileLoadAuxLangSeparator: TMenuItem
           Caption = '-'
         end
+      end
+      object mnuFileOpenSet: TMenuItem
+        Caption = 'Load translation set'
+        Hint = 'Loads a recent translation set (main+ translation + auxiliary file).'
       end
       object mnuFileSaveTranslation: TMenuItem
         Caption = '&Save translation'
@@ -516,6 +520,15 @@ object frmIniPrevMain: TfrmIniPrevMain
       object mnuMiscAddNewStrings: TMenuItem
         Caption = 'Add new strings to &multiple translations'
         OnClick = mnuMiscAddNewStringsClick
+      end
+      object mnuMiscCheckQuotes: TMenuItem
+        Caption = 'Check &quotes'
+        Hint = 'Checks if quotation marks are present in the beginning and in the end of all lines'
+        ShortCut = 16606
+        OnClick = mnuMiscCheckQuotesClick
+      end
+      object mnuMiscSeparator01: TMenuItem
+        Caption = '-'
       end
       object mnuMiscAbout: TMenuItem
         Caption = '&About'
